--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,7 +17,7 @@ setw -g aggressive-resize on
 unbind C-b
 set -g prefix C-a
 
-# Set parent terminal title to reflect current window in tmux session 
+# Set parent terminal title to reflect current window in tmux session
 set -g set-titles on
 set -g set-titles-string "#I:#W"
 
@@ -33,36 +33,10 @@ set -g mouse on
 # ===   Key bindings     ===
 # ==========================
 
-# Unbind default key bindings, we're going to override
-unbind "\$" # rename-session
-unbind ,    # rename-window
-unbind %    # split-window -h
-unbind '"'  # split-window
-unbind }    # swap-pane -D
-unbind {    # swap-pane -U
-unbind [    # paste-buffer
-unbind ]    
-unbind "'"  # select-window
-unbind n    # next-window
-unbind p    # previous-window
-unbind l    # last-window
-unbind M-n  # next window with alert
-unbind M-p  # next window with alert
-unbind o    # focus thru panes
-unbind &    # kill-window
-unbind "#"  # list-buffer 
-unbind =    # choose-buffer
-unbind z    # zoom-pane
-unbind M-Up  # resize 5 rows up
-unbind M-Down # resize 5 rows down
-unbind M-Right # resize 5 rows right
-unbind M-Left # resize 5 rows left
-
-
 # Edit configuration and reload
 bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"Config reloaded\"'"
 
-# Reload tmux configuration 
+# Reload tmux configuration
 bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
 
 # new window and retain cwd
@@ -71,52 +45,32 @@ bind c new-window -c "#{pane_current_path}"
 # Prompt to rename window right after it's created
 set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
 
-# Rename session and window
-bind r command-prompt -I "#{window_name}" "rename-window '%%'"
-bind R command-prompt -I "#{session_name}" "rename-session '%%'"
+# vi keys for switching panes
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
-# Split panes
-bind | split-window -h -c "#{pane_current_path}"
-bind _ split-window -v -c "#{pane_current_path}"
+# Splitting panes.
+bind | split-window -h
+bind - split-window -v
 
-# Select pane and windows
-bind -r C-[ previous-window
-bind -r C-] next-window
-bind -r [ select-pane -t :.-
-bind -r ] select-pane -t :.+
-bind -r Tab last-window   # cycle thru MRU tabs
-bind -r C-o swap-pane -D
+# # Vi copypaste
+unbind p
+bind p paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-# Zoom pane
-bind + resize-pane -Z
+# shift-movement keys will resize panes
+bind J resize-pane -D 20
+bind K resize-pane -U 20
+bind H resize-pane -L 20
+bind L resize-pane -R 20
 
-# Link window
-bind L command-prompt -p "Link window from (session:window): " "link-window -s %% -a"
-
-# Swap panes back and forth with 1st pane
-# When in main-(horizontal|vertical) layouts, the biggest/widest panel is always @1
-bind \ if '[ #{pane_index} -eq 1 ]' \
-     'swap-pane -s "!"' \
-     'select-pane -t:.1 ; swap-pane -d -t 1 -s "!"'
-
-# Kill pane/window/session shortcuts
-bind x kill-pane
-bind X kill-window
-bind C-x confirm-before -p "kill other windows? (y/n)" "kill-window -a"
-bind Q confirm-before -p "kill-session #S? (y/n)" kill-session
-
-# Merge session with another one (e.g. move all windows)
-# If you use adhoc 1-window sessions, and you want to preserve session upon exit
-# but don't want to create a lot of small unnamed 1-window sessions around
-# move all windows from current session to main named one (dev, work, etc)
-bind C-u command-prompt -p "Session to merge with: " \
-   "run-shell 'yes | head -n #{session_windows} | xargs -I {} -n 1 tmux movew -t %%'"
-
-# Detach from session
-bind d detach
-bind D if -F '#{session_many_attached}' \
-    'confirm-before -p "Detach other clients? (y/n)" "detach -a"' \
-    'display "Session has only 1 client attached"'
+bind M-j resize-pane -D
+bind M-k resize-pane -U
+bind M-h resize-pane -L
+bind M-l resize-pane -R
 
 # Hide status bar on demand
 bind C-s if -F '#{s/off//:status}' 'set status off' 'set status on'
@@ -192,7 +146,7 @@ bind -T copy-mode-vi MouseDragEnd1Pane \
     send-keys -X copy-pipe "$yank"
 bind -T copy-mode-vi MouseDown1Pane select-pane \;\
    send-keys -X clear-selection
-    
+
 # iTerm2 works with clipboard out of the box, set-clipboard already set to "external"
 # tmux show-options -g -s set-clipboard
 # set-clipboard on|external
@@ -247,7 +201,7 @@ separator_powerline_right=""
 # setw -g window-status-style "fg=$color_status_text,bg=$color_dark"
 setw -g window-status-format " #I:#W "
 setw -g window-status-current-style "fg=$color_light,bold,bg=$color_main"
-setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main]$separator_powerline_right#[default] #I:#W# #[fg=$color_main,bg=$color_dark]$separator_powerline_right#[default]"
+setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main]$separator_powerline_right#[default]#[fg=$color_light,bold,bg=$color_main] #I:#W #[fg=$color_main,bg=$color_dark]$separator_powerline_right#[default]"
 
 # when window has monitoring notification
 setw -g window-status-activity-style "fg=$color_main"
@@ -352,8 +306,9 @@ set -g @open-S 'https://www.google.com/search?q='
 # ==============================================
 
 # Session is considered to be remote when we ssh into host
-if-shell 'test -n "$SSH_CLIENT"' \
-    'source-file ~/.tmux/tmux.remote.conf'
+if-shell 'test -n $SSH_CLIENT' 'set -g status-left "lol"'
+
+# if [ -n "$SSH_CLIENT" ]; then source-file ~/.tmux/tmux.remote.conf
 
 # We want to have single prefix key "C-a", usable both for local and remote session
 # we don't want to "C-a" + "a" approach either
